--- a/Source/CriticalPath.Web/Views/Products/_ProductCategorySelectPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/Products/_ProductCategorySelectPartial.cshtml
@@ -11,7 +11,7 @@
         @Html.DropDownList("ParentCategoryId", null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
     </div>
     <div class="col-lg-3 col-md-3 col-sm-4 col-xs-7">
-        @Html.DropDownList("CategoryId", null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
+        @Html.DropDownListFor(m => m.CategoryId, null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.CategoryId, "", new { @class = "text-danger" })
     </div>
 </div>
