--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Create.cshtml
@@ -14,6 +14,13 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
+            @Html.LabelFor(model => model.PoNr, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.PoNr, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.PoNr, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
             @Html.LabelFor(model => model.OrderDate, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-4 col-md-5 col-sm-6">
                 @Html.EditorFor(m => m.OrderDate, new { htmlAttributes = new { @class = "form-control", autocomplete = "off" } })
@@ -27,21 +34,9 @@
                 @Html.ValidationMessageFor(m => m.CustomerId, "", new { @class = "text-danger" })
             </div>
         </div>
+        @Html.Partial("_ProductSelectPartial")
+        @Html.Partial("_AllPriceEdit", Model)
         @Html.Partial("_ProductSizingPartial")
-        <div class="form-group">
-            @Html.LabelFor(model => model.UnitPrice, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-2 col-md-2 col-sm-3">
-                @{ Html.EnableClientValidation(false); }
-                @Html.EditorFor(m => m.UnitPrice, new { htmlAttributes = new { @class = "form-control", autocomplete = "off" } })
-                @Html.ValidationMessageFor(m => m.UnitPrice, "", new { @class = "text-danger" })
-                @{ Html.EnableClientValidation(true); }
-            </div>
-            @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-lg-1 col-md-2 col-sm-2" })
-            <div class="col-lg-2 col-md-2 col-sm-2">
-                @Html.EditorFor(m => m.Quantity, new { htmlAttributes = new { @class = "form-control", autocomplete = "off" } })
-                @Html.ValidationMessageFor(m => m.Quantity, "", new { @class = "text-danger" })
-            </div>
-        </div>
         @*
             <div class="form-group">
                 @Html.LabelFor(model => model.DueDate, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
@@ -51,13 +46,6 @@
                 </div>
             </div>
         *@
-        <div class="form-group">
-            @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.TextBoxFor(m => m.Code, new { @class = "form-control", autocomplete = "off" })
-                @Html.ValidationMessageFor(m => m.Code, "", new { @class = "text-danger" })
-            </div>
-        </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
