--- a/Source/CriticalPath.Web/Views/PurchaseOrders/_PoPartialEdit.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/_PoPartialEdit.cshtml
@@ -3,6 +3,14 @@
 @using CP.i8n
 @model PurchaseOrderVM
 
+<div class="form-group mt15">
+    @Html.LabelFor(model => model.PoNr, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+    <div class="col-lg-5 col-md-6 col-sm-7">
+        @Html.TextBoxFor(m => m.PoNr, new { @class = "form-control", autocomplete = "off" })
+        @Html.ValidationMessageFor(m => m.PoNr, "", new { @class = "text-danger" })
+    </div>
+</div>
+
 @if (Model.IsApproved)
 {
     @Html.HiddenFor(m => m.CustomerId)
@@ -36,13 +44,6 @@ else
     </div>
 </div>
 
-<div class="form-group mt15">
-    @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-    <div class="col-lg-5 col-md-6 col-sm-7">
-        @Html.TextBoxFor(m => m.Code, new { @class = "form-control", autocomplete = "off" })
-        @Html.ValidationMessageFor(m => m.Code, "", new { @class = "text-danger" })
-    </div>
-</div>
 <div class="form-group">
     @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
     <div class="col-lg-5 col-md-6 col-sm-7">
