--- a/Source/CriticalPath.Web/Views/PurchaseOrders/_PoSizeRates.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/_PoSizeRates.cshtml
@@ -24,11 +24,14 @@
     <div class="col-lg-6 col-md-7 col-sm-8">
         @foreach (var rate in Model.SizeRates)
         {
-            <div class="col-xs-2 shadedRoundCaption">@rate.Caption: @rate.Rate</div>
+            <div class="col-xs-2">
+                <div class="shadedRoundCaption" style="width:100%;">@rate.Caption</div>
+                <div class="text-center" style="width:100%;">@rate.Rate</div>
+            </div>
         }
         <div class="col-xs-1 mr4">&nbsp;</div>
         <div class="col-xs-3 shadedRoundCaption fontSize125pc">
-            @Html.DisplayFor(m => m.SizeRateDivisor)
+            @Html.DisplayFor(m => m.SizeRatioDivisor)
         </div>
     </div>
 </div>
