--- a/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
@@ -54,6 +54,9 @@
                         <li>@Html.ActionLink(@EntityStrings.Suppliers, "Index", "Suppliers")</li>
                         <li>@Html.ActionLink(@EntityStrings.CreateSupplier, "Create", "Suppliers")</li>
                         <li class="divider"></li>
+                        <li>@Html.ActionLink(@EntityStrings.Manufacturers, "Index", "Manufacturers")</li>
+                        <li>@Html.ActionLink(@EntityStrings.CreateManufacturer, "Create", "Manufacturers")</li>
+                        <li class="divider"></li>
                         <li>@Html.ActionLink(@EntityStrings.Contacts, "Index", "Contacts")</li>
                     </ul>
                 </li>
