Implemented auto-complete Product select to PurchaseOrder/Create view

--- a/Source/CriticalPath.Web/Content/Site.css
+++ b/Source/CriticalPath.Web/Content/Site.css
@@ -79,3 +79,6 @@ div.accordion .accordion-group .accordion-heading .accordion-toggle {
     background-color:#fffff8;
     border: 1px solid #f0c4c4;
 }
+.ui-autocomplete{
+    position:relative;
+}
