--- a/Source/CriticalPath.Web/Views/Products/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/Products/Edit.cshtml
@@ -29,6 +29,7 @@
                 @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
             </div>
         </div>
+        @Html.Partial("_AllPriceEdit", Model)
         @Html.Partial("_SaveButtonsPartial")
     </div>
 }
