--- a/Source/CriticalPath.Web/Views/PurchaseOrders/_ProductSizingPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/_ProductSizingPartial.cshtml
@@ -18,7 +18,7 @@
 <div class="form-group">
     @Html.LabelFor(model => model.SizingStandardId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
     <div class="col-lg-5 col-md-6 col-sm-7">
-        @Html.DropDownList("SizingStandardId", null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
+        @Html.DropDownListFor(m => m.SizingStandardId, null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.SizingStandardId, "", new { @class = "text-danger" })
     </div>
 </div>
