--- a/Source/CriticalPath.Web/Views/Shared/_BaseLayout.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_BaseLayout.cshtml
@@ -50,5 +50,6 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
     @RenderBody()
+    @Html.Hidden("decimalSample", 1.1m)
 </body>
 </html>
