--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Approve.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Approve.cshtml
@@ -12,17 +12,17 @@
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.Id)
     <div class="form-horizontal">
-        <div class="row">
-            <label class="control-label col-md-2 col-sm-3">
+        <div class="form-group">
+            <label class="control-label col-lg-2 col-md-3 col-sm-3">
                 @Html.DisplayNameFor(model => model.OrderDate)
             </label>
-            <div class="col-md-10 col-sm-9 fontSize125pc">
+            <div class="col-sm-9 fontSize125pc mt10 mb10">
                 @Html.DisplayFor(m => m.OrderDate)
             </div>
         </div>
         @Html.Partial("_PoPartialEdit")
-        <div class="row">
-            <label class="control-label col-md-2 col-sm-3">
+        <div class="form-group">
+            <label class="control-label col-lg-2 col-md-3 col-sm-3">
                 @Html.DisplayNameFor(model => model.DueDate)
             </label>
             <div class="col-lg-5 col-md-6 col-sm-7">
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="row mt40">
-            <label class="control-label col-md-2 col-sm-3">
+            <label class="control-label col-lg-2 col-md-3 col-sm-3">
                 @Html.DisplayNameFor(model => model.IsApproved)
             </label>
             <div class="col-md-8 col-sm-8">
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="row mt20">
-            <div class="col-md-offset-2 col-sm-offset-3 col-md-3 col-sm-4">
+            <div class="col-lg-offset-2 col-md-offset-3 col-sm-offset-3 col-md-3 col-sm-4">
                 <input type="submit" value='@ActionStrings.Approve' class="btn btn-lg btn-success" />
             </div>
             <div class="col-md-3 col-sm-3">
