--- a/Source/CriticalPath.Web/Views/PurchaseOrders/_PoPartialEdit.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/_PoPartialEdit.cshtml
@@ -15,7 +15,7 @@
 {
     @Html.HiddenFor(m => m.CustomerId)
     <div class="row">
-        <label class="control-label col-md-2 col-sm-3">
+        <label class="control-label col-lg-2 col-md-3 col-sm-3">
             @Html.DisplayNameFor(model => model.Customer)
         </label>
         <div class="col-md-10 col-sm-9 fontSize150pc mt5">
@@ -36,10 +36,10 @@ else
 
 @Html.HiddenFor(m => m.ProductId)
 <div class="row">
-    <label class="control-label col-md-2 col-sm-3">
+    <label class="control-label col-lg-2 col-md-3 col-sm-3">
         @Html.DisplayNameFor(model => model.Product)
     </label>
-    <div class="col-md-10 col-sm-9 fontSize150pc mt5">
+    <div class="col-sm-9 fontSize150pc mt5 mb15">
         @Html.DisplayFor(m => m.Product)
     </div>
 </div>
