--- a/Source/CriticalPath.Web/Views/PurchaseOrders/_PoSizeRates.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/_PoSizeRates.cshtml
@@ -4,21 +4,15 @@
 @model PurchaseOrderVM
 
 <div class="row">
-    <label class="control-label col-md-2 col-sm-3">
+    <label class="control-label col-lg-2 col-md-3 col-sm-3">
         @Html.DisplayNameFor(model => model.SizingStandard)
     </label>
-    <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.SizingStandard.Title)
-    </div>
-    <div class="col-lg-6 col-md-7 col-sm-8">
-        @foreach (var sizing in Model.SizingStandard.Sizings)
-        {
-            <div class="col-xs-2 shadedRoundCaption">@sizing.Caption</div>
-        }
+    <div class="col-sm-9 mt10">
+        <span class="fontSize125pc">@Model.SizingStandard.Title</span>
     </div>
 </div>
 <div class="row mt20">
-    <label class="control-label col-md-2 col-sm-3">
+    <label class="control-label col-lg-2 col-md-3 col-sm-3">
         @Html.DisplayNameFor(model => model.SizeRates)
     </label>
     <div class="col-lg-6 col-md-7 col-sm-8">
