--- a/Source/CriticalPath.Web/Views/PurchaseOrders/_ProductSizingPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/_ProductSizingPartial.cshtml
@@ -97,13 +97,25 @@
         <div class="col-xs-2 pl0 mb5">
             @Html.EditorFor(m => m.Size12Rate, new { htmlAttributes = new { @class = "form-control", autocomplete = "off", min = 0 } })
         </div>
-        <div class="col-xs-4 pl0">
-            <input id="SizeRatioDivisorDisplay" type="text" class = "form-control" readonly = "readonly" autocomplete = "off" value="0"/>
-            @Html.HiddenFor(m => m.SizeRatioDivisor)
-            @Html.ValidationMessageFor(m => m.SizeRatioDivisor, "", new { @class = "text-danger" })
-        </div>
     </div>
 </div>
+<div class="form-group">
+    @Html.LabelFor(model => model.SizeRatioDivisor, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+    <div class="col-lg-2 col-md-3 col-sm-3">
+        <input id="SizeRatioDivisorDisplay" class="form-control text-right"
+                type="number" readonly="readonly" autocomplete="off" value="0" />
+        @Html.HiddenFor(m => m.SizeRatioDivisor)
+        @Html.ValidationMessageFor(m => m.SizeRatioDivisor, "", new { @class = "text-danger" })
+    </div>
+</div>
+<div class="form-group">
+    @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+    <div class="col-lg-2 col-md-3 col-sm-3">
+        @Html.EditorFor(m => m.Quantity, new { htmlAttributes = new { @class = "form-control text-right" } })
+        @Html.ValidationMessageFor(m => m.Quantity, "", new { @class = "text-danger" })
+    </div>
+</div>
+
 <script type="text/javascript">
     var sizingSelect = $('#SizingStandardId');
     var sizingCaptions = [$('#Size1Caption'),$('#Size2Caption'),$('#Size3Caption'),$('#Size4Caption'),$('#Size5Caption'),$('#Size6Caption'),$('#Size7Caption'),$('#Size8Caption'),$('#Size9Caption'),$('#Size10Caption'),$('#Size11Caption'),$('#Size12Caption')];
